# TSRE5vc

./: .gitignore  CMakeLists.txt  README.md  cerecent.txt  settings.txt
docs/features/: renderer-pipeline-review-and-design.md
docs/tasks/renderer/: 00-task-roadmap.md  01-runtime-pipeline-switch.md  02-renderer-core-generic-queue.md  03-selection-and-picking-parity.md  04-terrain-highres-gather.md  05-terrain-distant-water-sky.md  06-world-objects-shape-based.md  07-world-objects-procedural-and-helpers.md  08-overlays-tdb-activity-markers.md  09-shadows-hud-compass-pointer.md  10-parity-automation-and-performance-gate.md
src/: AceLib.cpp  Activity.cpp  CELoadWindow.cpp  CameraRot.cpp  Consist.cpp  Game.cpp  LoadWindow.cpp  MapDataOSM.cpp  OSMFeatures.h  PaintTexLib.cpp  Path.cpp  PropertiesSignal.cpp  QuadTree.cpp  Route.cpp  RouteEditorClient.cpp  RouteEditorGLWidget.cpp  RouteEditorServer.cpp  RouteEditorWindow.cpp  SFileC.cpp  Service.cpp  ShapeHierarchyWindow.cpp  ShapeViewerNavigatorWidget.cpp  TDB.cpp  TDB.h  TFile.cpp  TSectionDAT.cpp  Tile.cpp  Traffic.cpp  Trk.cpp  main.cpp
src/conEditor/: CELoadWindow.cpp  ConEditorWindow.cpp  ConListWidget.cpp  ConUnitsWidget.cpp  EngListWidget.cpp  OverwriteDialog.cpp  RandomConsist.cpp
src/mzip/: MZip.cpp  MZip.h
src/mzip/miniz/: miniz.h
src/routeEditor/: AboutWindow.cpp  ActivityTools.cpp  ClientUsersWindow.cpp  ErrorMessageProperties.cpp  ErrorMessagesWindow.cpp  GeoTools.cpp  GeoTools.h  LoadWindow.cpp  NaviBox.cpp  NaviWindow.cpp  ObjTools.cpp  ObjTools.h  PlayActivitySelectWindow.cpp  RouteEditorClient.cpp  RouteEditorGLWidget.cpp  RouteEditorGLWidget.h  RouteEditorServer.cpp  RouteEditorWindow.cpp  ShapeViewWindow.cpp  TerrainTools.cpp  TerrainTools.h  TerrainTreeWindow.cpp  TerrainWaterWindow.cpp  TrkWindow.cpp
src/routeEditor/activity/: ActivityEventProperties.cpp  ActivityEventProperties.h  ActivityEventWindow.cpp  ActivityServiceProperties.cpp  ActivityServiceWindow.cpp  ActivityTimetableProperties.cpp  ActivityTimetableWindow.cpp  ActivityTrafficProperties.cpp  ActivityTrafficWindow.cpp
src/routeEditor/properties/: EditFileNameDialog.cpp  PropertiesAbstract.cpp  PropertiesAbstract.h  PropertiesActivityObject.cpp  PropertiesActivityObject.h  PropertiesActivityPath.cpp  PropertiesActivityPath.h  PropertiesCarspawner.cpp  PropertiesCarspawner.h  PropertiesConsist.cpp  PropertiesConsist.h  PropertiesDyntrack.cpp  PropertiesDyntrack.h  PropertiesForest.cpp  PropertiesForest.h  PropertiesGroup.cpp  PropertiesGroup.h  PropertiesLevelCr.cpp  PropertiesLevelCr.h  PropertiesPickup.cpp  PropertiesPickup.h  PropertiesPlatform.cpp  PropertiesPlatform.h  PropertiesRuler.cpp  PropertiesRuler.h  PropertiesSiding.cpp  PropertiesSiding.h  PropertiesSignal.cpp  PropertiesSignal.h  PropertiesSoundRegion.cpp  PropertiesSoundRegion.h  PropertiesSoundSource.cpp  PropertiesSoundSource.h  PropertiesSpeedpost.cpp  PropertiesSpeedpost.h  PropertiesStatic.cpp  PropertiesStatic.h  PropertiesTerrain.cpp  PropertiesTerrain.h  PropertiesTrackItem.cpp  (+10 more)
src/shapeViewer/: ConInfoWidget.cpp  ContentHierarchyInfo.cpp  EngInfoWidget.cpp  ShapeHierarchyInfo.cpp  ShapeHierarchyWindow.cpp  ShapeInfoWidget.cpp  ShapeTextureInfo.cpp  ShapeTexturesWindow.cpp  ShapeViewerGLWidget.cpp  ShapeViewerNavigatorWidget.cpp  ShapeViewerWindow.cpp
src/tsre/: ClientInfo.cpp  ErrorMessage.cpp  ErrorMessagesLib.cpp  Game.cpp  Game.h  GameObj.cpp  Undo.cpp
src/tsre/camera/: Camera.cpp  Camera.h  CameraConsist.cpp  CameraFree.cpp  CameraRot.cpp
src/tsre/coords/: Coords.cpp  CoordsGpx.cpp  CoordsKml.cpp  CoordsMkr.cpp  CoordsRoutePlaces.cpp
src/tsre/fileFunctions/: FileBuffer.cpp  ParserX.cpp  ParserX.h  ReadFile.h  TarFile.cpp  TarFile.h
src/tsre/geo/: GeoCoordinates.cpp  GeoCoordinates.h  GeoHgtFile.cpp  GeoHgtFile.h  GeoTerrainFile.cpp  GeoTiffFile.cpp  GeoTiffFile.h  HeightWindow.cpp  MapData.cpp  MapDataOSM.cpp  MapDataOSM.h  MapDataUrlImage.cpp  MapDataUrlImage.h  MapWindow.cpp  OSMFeatures.cpp  UriImageDrawThread.cpp  UriImageDrawThread.h
src/tsre/gui/: ActionChooseDialog.cpp  ChooseFileDialog.cpp  ClickableLabel.cpp  GuiFunct.cpp  TextEditDialog.cpp  UnsavedDialog.cpp
src/tsre/hud/: GuiGlCompass.cpp  GuiGlCompass.h  SimpleHud.cpp
src/tsre/math3d/: Flex.cpp  GLMatrix.cpp  Intersections.cpp  Vector2f.cpp  Vector2i.cpp  Vector3f.cpp  Vector4f.cpp
src/tsre/ogl/: GLUU.cpp  GLUU.h  OglObj.cpp  OglObj.h  Pointer3d.h  PoleObj.h  TextObj.cpp  TextObj.h  TrackItemObj.h
src/tsre/procedural/: ComplexLine.cpp  ComplexLine.h  GlobalDefinitions.cpp  ProceduralMstsDyntrack.cpp  ProceduralMstsDyntrack.h  ProceduralShape.cpp  ProceduralShape.h  ShapeTemplates.cpp
src/tsre/renderer/: OpenGL3Renderer.cpp  OpenGL3Renderer.h  RenderItem.cpp  Renderer.cpp
src/tsre/shape/: ObjFile.cpp  SFile.cpp  SFileC.cpp  SFileC.h  SFileX.cpp  SFileX.h  ShapeLib.cpp
src/tsre/sound/: MstsSoundDefinition.cpp  MstsSoundDefinition.h  SoundLib.cpp  SoundManager.cpp  SoundSource.cpp  SoundSource.h  SoundVariables.cpp
src/tsre/tdb/: Ruch.cpp  Ruch.h  SigCfg.cpp  SignalShape.cpp  SignalType.cpp  SpeedPost.cpp  SpeedPostDAT.cpp  SpeedPostDAT.h  TDB.cpp  TDB.h  TDBClient.cpp  TDBClient.h  TRitem.cpp  TRitem.h  TRnode.cpp  TRnode.h  TSection.cpp  TSectionDAT.cpp  TSectionDAT.h  TrackShape.cpp
src/tsre/texture/: AceLib.cpp  AceLib.h  Brush.cpp  DdsLib.cpp  DdsLib.h  ImageLib.cpp  ImageLib.h  MapLib.cpp  MapLib.h  PaintTexLib.cpp  PaintTexLib.h  TexLib.cpp  TexLib.h  Texture.cpp  Texture.h
src/tsre/trains/: ActLib.cpp  Activity.cpp  Activity.h  ActivityEvent.cpp  ActivityObject.cpp  ActivityObject.h  ActivityTimetable.cpp  ConLib.cpp  Consist.cpp  Consist.h  Eng.cpp  EngLib.cpp  Path.cpp  Path.h  Service.cpp  Traffic.cpp  TrainNetworkEng.cpp
src/tsre/world/: Environment.cpp  OrtsWeatherChange.cpp  QuadTree.cpp  Ref.cpp  Route.cpp  Route.h  RouteClient.cpp  RouteClient.h  Skydome.cpp  Skydome.h  SoundList.cpp  TFile.cpp  TFile.h  Terrain.cpp  Terrain.h  TerrainClient.cpp  TerrainClient.h  TerrainInfo.cpp  TerrainLib.cpp  TerrainLib.h  TerrainLibQt.cpp  TerrainLibQt.h  Tile.cpp  (+6 more)
(+36 files in other folders)
