cmake_minimum_required(VERSION 3.16)

project(TSRE5vc LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Network Core Core5Compat Widgets OpenGL OpenGLWidgets WebSockets )
find_package(OpenAL REQUIRED)

qt_standard_project_setup()

qt_add_executable(TSRE5vc
    ./src/mzip/miniz
    ./src/mzip/miniz/miniz.h
    ./src/mzip/MZip.cpp
    ./src/mzip/MZip.h
    ./src/AboutWindow.h
    ./src/AceLib.h
    ./src/ActionChooseDialog.h
    ./src/Activity.h
    ./src/ActivityEvent.h
    ./src/ActivityEventProperties.h
    ./src/ActivityEventWindow.h
    ./src/ActivityObject.h
    ./src/ActivityServiceProperties.h
    ./src/ActivityServiceWindow.h
    ./src/ActivityTimetable.h
    ./src/ActivityTimetableProperties.h
    ./src/ActivityTimetableWindow.h
    ./src/ActivityTools.h
    ./src/ActivityTrafficProperties.h
    ./src/ActivityTrafficWindow.h
    ./src/ActLib.h
    ./src/Brush.h
    ./src/Camera.h
    ./src/CameraConsist.h
    ./src/CameraFree.h
    ./src/CameraRot.h
    ./src/CarSpawnerObj.h
    ./src/CELoadWindow.h
    ./src/ChooseFileDialog.h
    ./src/ClickableLabel.h
    ./src/ClientInfo.h
    ./src/ClientUsersWindow.h
    ./src/ComplexLine.h
    ./src/ConEditorWindow.h
    ./src/ConInfoWidget.h
    ./src/ConLib.h
    ./src/ConListWidget.h
    ./src/Consist.h
    ./src/ContentHierarchyInfo.h
    ./src/ConUnitsWidget.h
    ./src/Coords.h
    ./src/CoordsGpx.h
    ./src/CoordsKml.h
    ./src/CoordsMkr.h
    ./src/CoordsRoutePlaces.h
    ./src/DynTrackObj.h
    ./src/EditFileNameDialog.h
    ./src/Eng.h
    ./src/EngInfoWidget.h
    ./src/EngLib.h
    ./src/EngListWidget.h
    ./src/Environment.h
    ./src/ErrorMessage.h
    ./src/ErrorMessageProperties.h
    ./src/ErrorMessagesLib.h
    ./src/ErrorMessagesWindow.h
    ./src/FileBuffer.h
    ./src/FileFunctions.h
    ./src/Flex.h
    ./src/ForestObj.h
    ./src/Game.h
    ./src/GameObj.h
    ./src/GeoCoordinates.h
    ./src/GeoHgtFile.h
    ./src/GeoTerrainFile.h
    ./src/GeoTiffFile.h
    ./src/GeoTools.h
    ./src/GLH.h
    ./src/GLMatrix.h
    ./src/GlobalDefinitions.h
    ./src/GLUU.h
    ./src/GroupObj.h
    ./src/GuiFunct.h
    ./src/GuiGlCompass.h
    ./src/HazardObj.h
    ./src/HeightWindow.h
    ./src/ImageLib.h
    ./src/Intersections.h
    ./src/LevelCrObj.h
    ./src/LoadWindow.h
    ./src/MapData.h
    ./src/MapDataOSM.h
    ./src/MapDataUrlImage.h
    ./src/MapLib.h
    ./src/MapWindow.h
    ./src/MstsSoundDefinition.h
    ./src/NaviBox.h
    ./src/NaviWindow.h
    ./src/NewRouteWindow.h
    ./src/ObjFile.h
    ./src/ObjTools.h
    ./src/OglObj.h
    ./src/OpenGL3Renderer.h
    ./src/OrtsWeatherChange.h
    ./src/OSMFeatures.h
    ./src/OverwriteDialog.h
    ./src/PaintTexLib.h
    ./src/ParserX.h
    ./src/Path.h
    ./src/PickupObj.h
    ./src/PlatformObj.h
    ./src/PlayActivitySelectWindow.h
    ./src/Pointer3d.h
    ./src/PoleObj.h
    ./src/ProceduralMstsDyntrack.h
    ./src/ProceduralShape.h
    ./src/PropertiesAbstract.h
    ./src/PropertiesActivityObject.h
    ./src/PropertiesActivityPath.h
    ./src/PropertiesCarspawner.h
    ./src/PropertiesConsist.h
    ./src/PropertiesDyntrack.h
    ./src/PropertiesForest.h
    ./src/PropertiesGroup.h
    ./src/PropertiesLevelCr.h
    ./src/PropertiesPickup.h
    ./src/PropertiesPlatform.h
    ./src/PropertiesRuler.h
    ./src/PropertiesSiding.h
    ./src/PropertiesSignal.h
    ./src/PropertiesSoundRegion.h
    ./src/PropertiesSoundSource.h
    ./src/PropertiesSpeedpost.h
    ./src/PropertiesStatic.h
    ./src/PropertiesTerrain.h
    ./src/PropertiesTrackItem.h
    ./src/PropertiesTrackObj.h
    ./src/PropertiesTransfer.h
    ./src/PropertiesUndefined.h
    ./src/QuadTree.h
    ./src/RandomConsist.h
    ./src/RandomTransformWorldObjDialog.h
    ./src/ReadFile.h
    ./src/Ref.h
    ./src/Renderer.h
    ./src/RenderItem.h
    ./src/Route.h
    ./src/RouteClient.h
    ./src/RouteEditorClient.h
    ./src/RouteEditorGLWidget.h
    ./src/RouteEditorServer.h
    ./src/RouteEditorWindow.h
    ./src/Ruch.h
    ./src/RulerObj.h
    ./src/Service.h
    ./src/SFile.h
    ./src/SFileC.h
    ./src/SFileX.h
    ./src/Shader.h
    ./src/ShapeHierarchyInfo.h
    ./src/ShapeHierarchyWindow.h
    ./src/ShapeInfoWidget.h
    ./src/ShapeLib.h
    ./src/ShapeTemplates.h
    ./src/ShapeTextureInfo.h
    ./src/ShapeTexturesWindow.h
    ./src/ShapeViewerGLWidget.h
    ./src/ShapeViewerNavigatorWidget.h
    ./src/ShapeViewerWindow.h
    ./src/ShapeViewWindow.h
    ./src/SigCfg.h
    ./src/SignalObj.h
    ./src/SignalShape.h
    ./src/SignalType.h
    ./src/SignalWindow.h
    ./src/SignalWindowLink.h
    ./src/SimpleHud.h
    ./src/Skydome.h
    ./src/SoundLib.h
    ./src/SoundList.h
    ./src/SoundManager.h
    ./src/SoundRegionObj.h
    ./src/SoundSource.h
    ./src/SoundSourceObj.h
    ./src/SoundVariables.h
    ./src/SpeedPost.h
    ./src/SpeedPostDAT.h
    ./src/SpeedpostObj.h
    ./src/StaticObj.h
    ./src/TarFile.h
    ./src/TDB.h
    ./src/TDBClient.h
    ./src/Terrain.h
    ./src/TerrainClient.h
    ./src/TerrainInfo.h
    ./src/TerrainLib.h
    ./src/TerrainLibQt.h
    ./src/TerrainLibQtClient.h
    ./src/TerrainLibSimple.h
    ./src/TerrainTools.h
    ./src/TerrainTreeWindow.h
    ./src/TerrainWaterWindow.h
    ./src/TerrainWaterWindow2.h
    ./src/TexLib.h
    ./src/TextEditDialog.h
    ./src/TextObj.h
    ./src/Texture.h
    ./src/TFile.h
    ./src/Tile.h
    ./src/TrackItemObj.h
    ./src/TrackObj.h
    ./src/TrackShape.h
    ./src/Traffic.h
    ./src/TrainNetworkEng.h
    ./src/TransferObj.h
    ./src/TransformWorldObjDialog.h
    ./src/TRitem.h
    ./src/Trk.h
    ./src/TrkWindow.h
    ./src/TRnode.h
    ./src/TrWatermarkObj.h
    ./src/TS.h
    ./src/TSection.h
    ./src/TSectionDAT.h
    ./src/ui_HelloForm.h
    ./src/Undo.h
    ./src/UnsavedDialog.h
    ./src/UriImageDrawThread.h
    ./src/Vector2f.h
    ./src/Vector2i.h
    ./src/Vector3f.h
    ./src/Vector4f.h
    ./src/WorldObj.h
    ./src/AboutWindow.cpp
    ./src/AceLib.cpp
    ./src/ActionChooseDialog.cpp
    ./src/Activity.cpp
    ./src/ActivityEvent.cpp
    ./src/ActivityEventProperties.cpp
    ./src/ActivityEventWindow.cpp
    ./src/ActivityObject.cpp
    ./src/ActivityServiceProperties.cpp
    ./src/ActivityServiceWindow.cpp
    ./src/ActivityTimetable.cpp
    ./src/ActivityTimetableProperties.cpp
    ./src/ActivityTimetableWindow.cpp
    ./src/ActivityTools.cpp
    ./src/ActivityTrafficProperties.cpp
    ./src/ActivityTrafficWindow.cpp
    ./src/ActLib.cpp
    ./src/Brush.cpp
    ./src/Camera.cpp
    ./src/CameraConsist.cpp
    ./src/CameraFree.cpp
    ./src/CameraRot.cpp
    ./src/CarSpawnerObj.cpp
    ./src/CELoadWindow.cpp
    ./src/ChooseFileDialog.cpp
    ./src/ClickableLabel.cpp
    ./src/ClientInfo.cpp
    ./src/ClientUsersWindow.cpp
    ./src/ComplexLine.cpp
    ./src/ConEditorWindow.cpp
    ./src/ConInfoWidget.cpp
    ./src/ConLib.cpp
    ./src/ConListWidget.cpp
    ./src/Consist.cpp
    ./src/ContentHierarchyInfo.cpp
    ./src/ConUnitsWidget.cpp
    ./src/Coords.cpp
    ./src/CoordsGpx.cpp
    ./src/CoordsKml.cpp
    ./src/CoordsMkr.cpp
    ./src/CoordsRoutePlaces.cpp
    ./src/DynTrackObj.cpp
    ./src/EditFileNameDialog.cpp
    ./src/Eng.cpp
    ./src/EngInfoWidget.cpp
    ./src/EngLib.cpp
    ./src/EngListWidget.cpp
    ./src/Environment.cpp
    ./src/ErrorMessage.cpp
    ./src/ErrorMessageProperties.cpp
    ./src/ErrorMessagesLib.cpp
    ./src/ErrorMessagesWindow.cpp
    ./src/FileBuffer.cpp
    ./src/FileFunctions.cpp
    ./src/Flex.cpp
    ./src/ForestObj.cpp
    ./src/Game.cpp
    ./src/GameObj.cpp
    ./src/GeoCoordinates.cpp
    ./src/GeoHgtFile.cpp
    ./src/GeoTerrainFile.cpp
    ./src/GeoTiffFile.cpp
    ./src/GeoTools.cpp
    ./src/GLH.cpp
    ./src/GLMatrix.cpp
    ./src/GlobalDefinitions.cpp
    ./src/GLUU.cpp
    ./src/GroupObj.cpp
    ./src/GuiFunct.cpp
    ./src/GuiGlCompass.cpp
    ./src/HazardObj.cpp
    ./src/HeightWindow.cpp
    ./src/ImageLib.cpp
    ./src/Intersections.cpp
    ./src/LevelCrObj.cpp
    ./src/LoadWindow.cpp
    ./src/main.cpp
    ./src/MapData.cpp
    ./src/MapDataOSM.cpp
    ./src/MapDataUrlImage.cpp
    ./src/MapLib.cpp
    ./src/MapWindow.cpp
    ./src/MstsSoundDefinition.cpp
    ./src/NaviBox.cpp
    ./src/NaviWindow.cpp
    ./src/NewRouteWindow.cpp
    ./src/ObjFile.cpp
    ./src/ObjTools.cpp
    ./src/OglObj.cpp
    ./src/OpenGL3Renderer.cpp
    ./src/OrtsWeatherChange.cpp
    ./src/OSMFeatures.cpp
    ./src/OverwriteDialog.cpp
    ./src/PaintTexLib.cpp
    ./src/ParserX.cpp
    ./src/Path.cpp
    ./src/PickupObj.cpp
    ./src/PlatformObj.cpp
    ./src/PlayActivitySelectWindow.cpp
    ./src/Pointer3d.cpp
    ./src/PoleObj.cpp
    ./src/ProceduralMstsDyntrack.cpp
    ./src/ProceduralShape.cpp
    ./src/PropertiesAbstract.cpp
    ./src/PropertiesActivityObject.cpp
    ./src/PropertiesActivityPath.cpp
    ./src/PropertiesCarspawner.cpp
    ./src/PropertiesConsist.cpp
    ./src/PropertiesDyntrack.cpp
    ./src/PropertiesForest.cpp
    ./src/PropertiesGroup.cpp
    ./src/PropertiesLevelCr.cpp
    ./src/PropertiesPickup.cpp
    ./src/PropertiesPlatform.cpp
    ./src/PropertiesRuler.cpp
    ./src/PropertiesSiding.cpp
    ./src/PropertiesSignal.cpp
    ./src/PropertiesSoundRegion.cpp
    ./src/PropertiesSoundSource.cpp
    ./src/PropertiesSpeedpost.cpp
    ./src/PropertiesStatic.cpp
    ./src/PropertiesTerrain.cpp
    ./src/PropertiesTrackItem.cpp
    ./src/PropertiesTrackObj.cpp
    ./src/PropertiesTransfer.cpp
    ./src/PropertiesUndefined.cpp
    ./src/QuadTree.cpp
    ./src/RandomConsist.cpp
    ./src/RandomTransformWorldObjDialog.cpp
    ./src/ReadFile.cpp
    ./src/Ref.cpp
    ./src/Renderer.cpp
    ./src/RenderItem.cpp
    ./src/Route.cpp
    ./src/RouteClient.cpp
    ./src/RouteEditorClient.cpp
    ./src/RouteEditorGLWidget.cpp
    ./src/RouteEditorServer.cpp
    ./src/RouteEditorWindow.cpp
    ./src/Ruch.cpp
    ./src/RulerObj.cpp
    ./src/Service.cpp
    ./src/SFile.cpp
    ./src/SFileC.cpp
    ./src/SFileX.cpp
    ./src/Shader.cpp
    ./src/ShapeHierarchyInfo.cpp
    ./src/ShapeHierarchyWindow.cpp
    ./src/ShapeInfoWidget.cpp
    ./src/ShapeLib.cpp
    ./src/ShapeTemplates.cpp
    ./src/ShapeTextureInfo.cpp
    ./src/ShapeTexturesWindow.cpp
    ./src/ShapeViewerGLWidget.cpp
    ./src/ShapeViewerNavigatorWidget.cpp
    ./src/ShapeViewerWindow.cpp
    ./src/ShapeViewWindow.cpp
    ./src/SigCfg.cpp
    ./src/SignalObj.cpp
    ./src/SignalShape.cpp
    ./src/SignalType.cpp
    ./src/SignalWindow.cpp
    ./src/SignalWindowLink.cpp
    ./src/SimpleHud.cpp
    ./src/Skydome.cpp
    ./src/SoundLib.cpp
    ./src/SoundList.cpp
    ./src/SoundManager.cpp
    ./src/SoundRegionObj.cpp
    ./src/SoundSource.cpp
    ./src/SoundSourceObj.cpp
    ./src/SoundVariables.cpp
    ./src/SpeedPost.cpp
    ./src/SpeedPostDAT.cpp
    ./src/SpeedpostObj.cpp
    ./src/StaticObj.cpp
    ./src/TarFile.cpp
    ./src/TDB.cpp
    ./src/TDBClient.cpp
    ./src/Terrain.cpp
    ./src/TerrainClient.cpp
    ./src/TerrainInfo.cpp
    ./src/TerrainLib.cpp
    ./src/TerrainLibQt.cpp
    ./src/TerrainLibQtClient.cpp
    ./src/TerrainLibSimple.cpp
    ./src/TerrainTools.cpp
    ./src/TerrainTreeWindow.cpp
    ./src/TerrainWaterWindow.cpp
    ./src/TerrainWaterWindow2.cpp
    ./src/TexLib.cpp
    ./src/TextEditDialog.cpp
    ./src/TextObj.cpp
    ./src/Texture.cpp
    ./src/TFile.cpp
    ./src/Tile.cpp
    ./src/TrackItemObj.cpp
    ./src/TrackObj.cpp
    ./src/TrackShape.cpp
    ./src/Traffic.cpp
    ./src/TrainNetworkEng.cpp
    ./src/TransferObj.cpp
    ./src/TransformWorldObjDialog.cpp
    ./src/TRitem.cpp
    ./src/Trk.cpp
    ./src/TrkWindow.cpp
    ./src/TRnode.cpp
    ./src/TrWatermarkObj.cpp
    ./src/TS.cpp
    ./src/TSection.cpp
    ./src/TSectionDAT.cpp
    ./src/Undo.cpp
    ./src/UnsavedDialog.cpp
    ./src/UriImageDrawThread.cpp
    ./src/Vector2f.cpp
    ./src/Vector2i.cpp
    ./src/Vector3f.cpp
    ./src/Vector4f.cpp
    ./src/WorldObj.cpp

)


target_link_libraries(TSRE5vc PRIVATE Qt6::Core5Compat Qt6::Network Qt6::Widgets Qt6::OpenGL Qt6::OpenGLWidgets Qt6::WebSockets )
target_link_libraries(TSRE5vc PUBLIC OpenAL::OpenAL )

install(TARGETS TSRE5vc
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    #RUNTIME DESTINATION "."
)
